# carioca

./: Carioca  Dockerfile  LICENSE  README.md  docker-compose.yml  example_app.py  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  main.py
carioca/: __init__.py  cards.py  cli.py  config.yaml  deck.py  game.py  gamestate.py  hand.py  melds.py  round.py
carioca/ai/: __init__.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: GameBoard.css  GameBoard.test.tsx  GameBoard.tsx  index.tsx  types.ts
frontend/src/hooks/: useDrag.ts
python/carioca_component/: __init__.py  _component.py
streamlit_app/: Dockerfile  app.py  board_adapter.py  docker-compose.yml  requirements.txt  state.py  utils.py
tests/: test_ai.py  test_board_adapter.py  test_cards.py  test_component.py  test_deck.py  test_game.py  test_hand.py  test_ui_utils.py  test_websocket.py
