[tool.poetry]
name = "carioca"
version = "0.1.0"
description = "Carioca card game engine, CLI and optional TUI/GUI."
authors = ["Ignacio Azúa <ignacio@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
typer = { version = "^0.12.3", extras = ["all"] }
rich = "^13.7.1"
PyYAML = "^6.0"
streamlit = "^1.35"
jinja2 = "^3.1"
pydantic = "^2.7"
streamlit-lottie = "^0.0.5"
fastapi = {version = "^0.111", optional = true}
uvicorn = {version = "^0.29", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.4.8"
black = "^24.3.0"
mypy = "^1.10.0"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
carioca = "carioca.cli:app"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
